--- a/sankaskep/index.html
+++ b/sankaskep/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="index.css">
     <title>Socket.IO chat</title>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="creatOrJoinroom.js"></script>
+    <script src="client.js"></script>
+
   </head>
   <body>
       <!--
@@ -27,9 +28,13 @@
         <div class="btn-rooms">
             <input id="roomCode" placeholder="Rum-namn" />
             <button onclick="joinRoom()">Join Game</button>
-            <button onclick="createRoom()">Creat Game</button>
+            <button onclick="chooseSize()">Creat Game</button>
         </div>
-
+        <div id="size">
+            <label for="choose-size">Choose size of the table, (standard is 10)</label>
+            <input  name = "choose-size" type="text">
+            <button id ='btn-size' onclick="createRoom()">Confirm</button>
+        </div>
         
     </body>
     
